# coloring-app

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODEBASE_CONTEXT.md  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt
.github/agents/: README.md  auditor-code.agent.md  auditor-infra.agent.md  code-reviewer.md  documentation-architect.md  feature-planner.agent.md  feature-planner.md  feature-reviewer.agent.md  implementation-executor.md  project-planner.agent.md  test-analyst.agent.md  test-suite-evaluator.md  web-research-specialist.agent.md
dev/active/01-component-size-selector/: component-size-selector-implementation.md
dev/code-audit/: code-audit-report.md  code-audit-summary.md
dev/phase-3-image-editing/: phase-3-image-editing-context.md
docs/: QA.md  STYLE_GUIDE.md
docs/phases/: PHASES_OVERVIEW.md  PHASE_1_CORE_PIPELINE.md  PHASE_2_MOSAIC_MODES.md
src/: config.py  main.py
src/api/: routes.py  schemas.py
src/models/: mosaic.py
src/processing/: backgrounds.py  compositing.py  cutout.py  enhancement.py  grid.py  quantization.py
src/rendering/: color_utils.py  geometry.py  pdf.py  preview.py
static/: index.html
static/css/: style.css
static/js/: app.js  crop.js  editor.js
tests/: conftest.py  test_audit_fixes.py  test_backgrounds.py  test_compositing.py  test_cutout.py  test_enhancement.py  test_grid.py  test_image_editing_integration.py  test_integration.py  test_mosaic_modes.py  test_mosaic_modes_integration.py  test_palette_edit.py  test_palette_edit_integration.py  test_pdf.py  test_preview.py  test_quantization.py
(+45 files in other folders)
